delete NavBar component and fix alignment for NavLinks

--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -29,7 +29,7 @@
     text-decoration: none;
     font-size: 25px;
     color: #818181;
-    display: flex; 
+    display: block; 
 }
 
 .link-wrapper :hover{
